# modern-cpp-benchmark

./: CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake
src/: CMakeLists.txt  static_variable_benchmark.cpp
